<resources>
    <string name="app_name">BarApp</string>

    <!-- Texto de botones -->
    <string name="boton_ingresar">Ingresar</string>
    <string name="boton_facebook">Facebook</string>
    <string name="boton_google">Google</string>
    <string name="boton_registrarse">Registrarse</string>
    <string name="boton_crear_cuenta">Crear cuenta</string>
    <string name="boton_cancelar">Cancelar</string>
    <string name="boton_confirmar">Confirmar</string>
...
    <string name="boton_seleccionar">Seleccionar</string>
    <string name="boton_ver">Ver</string>
    <string name="boton_si">Si</string>
    <string name="boton_no">No</string>

    <!-- Descripcion de botones -->
    <string name="boton_ingresar_descripcion">Botón ingresar</string>
    <string name="boton_facebook_descripcion">Botón Facebook</string>
    <string name="boton_google_descripcion">Botón Google</string>
    <string name="boton_registrarse_descripcion">Botón registarse</string>
    <string name="boton_crear_cuenta_descripcion">Botón crear cuenta</string>
    <string name="boton_buscar_descripcion">Botón buscar</string>
    <string name="boton_cancelar_descripcion">Botón cancelar</string>
...
    <string name="prefkey_idusuario">idUsuario</string>

    <!-- Errores -->
    <string name="error_title">Error</string>
    <string name="error_ubicacion_no_disponible">No se puede acceder a su ubicación</string>
    <string name="error_no_se_puede_acceder_al_menu">El menú no se encuentra disponible en este momento</string>
    <string name="error_campo_obligatorio">"El campo es obligatorio"</string>
    <string name="error_campo_fuera_de_rango">"El campo debe tener entre %1$d y %2$d caracteres"</string>
    <string name="error_campo_con_al_menos_un_digito">El campo debe tener al menos un dígito</string>
    <string name="error_campo_por_debajo_valor">El campo debe tener al menos %1$d caracteres</string>
    <string name="error_contrasenia_no_coincide">"Las contraseñas deben ser las mismas"</string>
    <string name="error_mail_no_valido">El mail ingresado no es válido</string>
    <string name="error_authenticating_user">Se ha producido un error autenticando al usuario</string>
    <string name="error_titulo_algo_salio_mal">Algo salió mal</string>
    <string name="error_buscando_detalle_restaurante">"Ocurrió un error al buscar la información del restaurante %1$s. Intente nuevamente en unos minutos."</string>
    <string name="error_buscando_opiniones_restaurante">"Ocurrió un error al buscar las opiniones del restaurante %1$s. Intente nuevamente en unos minutos."</string>
    <string name="error_limite_reservas_alcanzado">"Alcanzó el limite de %1$d reservas en este bar"</string>

...
