...
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/labelBuscandoEn"
        app:layout_constraintTop_toTopOf="@+id/labelBuscandoEn" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/hint_buscar"
        app:endIconDrawable="@drawable/icon_outlined_search_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/labelBuscandoEn">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textViewBuscar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:imeOptions="actionSearch"
            android:inputType="text|textCapSentences"
            android:maxLines="1"
            android:minHeight="48dp"
...
