<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:transitionGroup="true">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/logoBarApp"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription=""
        android:layout_marginTop="200dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center"
        app:srcCompat="@drawable/ic_launcher_barrapp" />

    <TextView
        android:id="@+id/textListaVacia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/lista_vacia_default"
        android:textAppearance="@style/TextAppearance.Material3.BodyLarge" />

</LinearLayout>